# arcadeops-control-tower-hackathon

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  TODO_HACKATHON_100.md  TODO_LOT_5_FULL.md  next.config.ts  package-lock.json  package.json
docs/: ARCHITECTURE.md  BUILD_IN_PUBLIC.md  DECK_OUTLINE.md  DEMO_SPEC.md  FEATURES.md  HOW_TO_DEMO.md  POST_HACKATHON_BACKLOG.md  RECORDING_CHECKLIST.md  SUBMISSION_COPY.md  SUBMISSION_LABLAB.md  VIDEO_SCRIPT.md  VIDEO_SCRIPT_90S.md  VULTR_DEPLOYMENT.md
docs/assets/: prod-deploy-snapshot.txt
docs/implementation/: CONTROL_TOWER_MILAN_PLAN.md  CONTROL_TOWER_UX_REFONTE_PLAN.md  HACKATHON_100_MASTER_PLAN.md  HACKATHON_POST_DEMO_NOTES.md  LOT_2_PLAN.md  (+2 more)
runner/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
runner/app/: __init__.py  config.py  main.py  orchestrator.py
runner/app/agents/: __init__.py  planner.py  worker.py
runner/app/fixtures/: mock-trace.json  safe_research_trace.json  tool_registry.json  vip_churn_trace.json
runner/app/llm/: __init__.py  function_calling.py  gemini_client.py
runner/app/models/: __init__.py  trace.py
runner/app/routes/: __init__.py  health.py  run_agent.py  runs.py  tools.py
runner/app/tools/: __init__.py  implementations.py  registry.py
runner/tests/: __init__.py
scripts/: dev-runner.ps1  dev-runner.sh  pre-demo-check.ps1  smoke-gate-mode-v22.ts  smoke-policy-gates.ts  vultr-cloud-init.yaml.template  vultr-destroy.ps1  vultr-destroy.sh  vultr-provision.ps1  vultr-provision.sh
(+57 files in other folders)
